[package]
name = "actix-jwt"
version = "0.1.0"
authors = ["Jarukit Jintanasathirakul <witjarukit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-alpha.3"
actix-web-httpauth = "0.4.2"
chrono = { version = "0.4.13", features = ["serde"]}
derive_more = "0.99.9
diesel = { version = "1.4.5", features = ["postgres","uuidv07", "r2d2", "chrono"]}
dotenv = "0.15.0"
futures = "0.3.5"
r2d2 = "0.8.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "1.0.5"
alcoholic-jwt = "1.0.0"
reqwest = "0.10.6"
actix-rt = "1.1.1"

